--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "copy-webpack-plugin": "^6.3.1",
     "css-loader": "^5.0.1",
     "exports-loader": "^1.1.1",
+    "expose-loader": "^1.0.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "sass": "^1.29.0",
