--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf dist && webpack --config webpack.config.dev.js -w",
-    "test": "webpack-dev-server --config webpack.config.dev.js --open"
+    "test": "webpack-dev-server --config webpack.config.dev.js --open",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/hong-cai/image-upload-crop-resize-javascript-webpack-project/issues"
   },
-  "homepage": "https://github.com/hong-cai/image-upload-crop-resize-javascript-webpack-project#readme",
+  "homepage": "https://hong-cai.github.io/image-upload-crop-resize-javascript-webpack-project#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.2.1",
@@ -43,6 +44,7 @@
     "autoprefixer": "^10.0.2",
     "bootstrap": "^4.5.3",
     "cropperjs": "^1.5.9",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "postcss-loader": "^4.1.0",
